# base64-tools

./: CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: ci.yml
decoder/: CMakeLists.txt
decoder/src/: main.cpp
encoder/: CMakeLists.txt
encoder/src/: main.cpp
