cmake_minimum_required(VERSION 3.10)
file(GLOB_RECURSE H_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h")
file(GLOB_RECURSE CPP_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
set(MANIFEST ${H_HEADER_FILES} ${CPP_SOURCE_FILES})
add_executable(decoder ${MANIFEST})
set(DECODER_TARGET_NAME "b64-decode")
set_target_properties(decoder PROPERTIES CXX_STANDARD 17 OUTPUT_NAME ${DECODER_TARGET_NAME})
target_compile_definitions(decoder PRIVATE "BINARY_NAME=\"${DECODER_TARGET_NAME}\"")
target_link_libraries(decoder PRIVATE cpp-base64 cxxopts)