cmake_minimum_required(VERSION 3.10)
file(GLOB_RECURSE H_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h")
file(GLOB_RECURSE CPP_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
set(MANIFEST ${H_HEADER_FILES} ${CPP_SOURCE_FILES})
add_executable(encoder ${MANIFEST})
set(ENCODER_TARGET_NAME "b64-encode")
set_target_properties(encoder PROPERTIES CXX_STANDARD 17 OUTPUT_NAME ${ENCODER_TARGET_NAME})
target_compile_definitions(encoder PRIVATE "BINARY_NAME=\"${ENCODER_TARGET_NAME}\"")
target_link_libraries(encoder PRIVATE cpp-base64 cxxopts)